--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://gauravkumar-sp.github.io/ogpmeta/">
     <meta property="og:title" content="OGPMeta">
-    <meta property="og:description" content="Testing OGP on a simple webpage.">
+    <meta property="og:description" content="Testing OGP on a simple webpage. It is hosted on Github pages for simplicity. Making description longer to see how it looks on different platforms.">
     <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT2V0ObUf9YwERGDfSiSLLdkwkXD91vMUwSBA&s">
 
     <title>OGP</title>
